<resources>
    <string name="app_name">Wijaya Farm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="laporan">Laporan</string>
    <string name="profil">Profil</string>
    <string name="welcom">Selamat Datang</string>
    <string name="dashboard">Dashboard</string>
    <string name="ayam">Ayam</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="panen">Panen</string>
    <string name="hidup">Hidup</string>
    <string name="mati">Mati</string>
    <string name="periode">Periode</string>
    <string name="total_pengeluaran">Total Pengeluaran</string>
    <string name="total_panen">Total Panen</string>
    <string name="role">Role</string>
    <string name="tambah">Tambah</string>
    <string name="nama">Nama</string>
    <string name="laporan_ayam">Laporan Ayam</string>
    <string name="bibit_awal">Bibit Awal</string>
    <string name="sehat">Sehat</string>
    <string name="sembuh">Sembuh</string>
    <string name="sakit">Sakit</string>
    <string name="title_activity_pemilik_menu">PemilikMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">button</string>
    <string name="bibit">Bibit</string>
    <string name="simpan">Simpan</string>
    <string name="sesuaikan">Sesuaikan</string>
    <string name="tanggal">Tanggal</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="jumlah_ayam">Jumlah Ayam</string>
    <string name="total_berat">Total Berat</string>
    <string name="harga_kiloan">Harga Kiloan</string>
    <string name="harga_total">Harga Total</string>
    <string name="ketersediaan">Ketersediaan</string>
    <string name="tersedia">Tersedia</string>
    <string name="terjual">Terjual</string>
</resources>